--- a/app/views/atividades/new.html.erb
+++ b/app/views/atividades/new.html.erb
@@ -1,3 +1,2 @@
-<h1><%= t '.title'%></h1><BR />
+<!-- Iniciando um novo cadastro de atividade -->
 <%= render 'form' %>
-<%= link_to t('links.back'), atividades_path %>
