--- a/app/views/alunos/registrations/new.html.erb
+++ b/app/views/alunos/registrations/new.html.erb
@@ -35,6 +35,7 @@
     <%= l.label :matricula %><i id="red">*</i>
     <div class="session">
           <%= l.text_field :matricula %>
+          <%= error_tag @aluno, :matricula %>
     </div>
 
     <div class="field">
@@ -52,16 +53,19 @@
     <%= l.label :email %><i id="red">*</i>
     <div class="session">
         <%= l.email_field :email %>
+        <%= error_tag @aluno, :email %>
     </div>
 
     <%= l.label :password %><i id="red">*</i>
     <div class="session">
         <%= l.password_field :password %>
+        <%= error_tag @aluno, :password %>
     </div>
 
     <%= l.label :password_confirmation %><i id="red">*</i>
     <div class="field">
         <%= l.password_field :password_confirmation %>
+        <%= error_tag @aluno, :password_confirmation %>
     </div>
     <br>
     <br></FIELDSET>
