--- a/app/views/avaliadores/registrations/edit.html.erb
+++ b/app/views/avaliadores/registrations/edit.html.erb
@@ -2,7 +2,7 @@
 
 <strong>
   <p>
-    <font size="9" color="red"></font>
+    <font size="5" color="red">*</font>
     <label>
       &nbsp <%= t('form_messages.requiredfields')%>
     </label>
