--- a/app/views/avaliacoes/avaliar_atividade.html.erb
+++ b/app/views/avaliacoes/avaliar_atividade.html.erb
@@ -1,2 +1,70 @@
-<h1>Avaliacoes#avaliar_atividade</h1>
-<p>Find me in app/views/avaliacoes/avaliar_atividade.html.erb</p>
+<script language= "JavaScript">
+    function index()
+    {
+        location.href = "/avaliador/home";
+    }
+</script>
+
+
+<% if @atividade_aluno.avaliador_id != current_avaliador.id and current_avaliador.admin == false  %>
+    <% flash[:alert] = "Você não tem permissão de avaliar esta atividade"%>
+<% elsif @atividade_aluno.avaliador_id == current_avaliador.id and current_avaliador.admin == false %>
+    <div id="my_id" >
+      <%= @avaliador = current_avaliador %>
+    </div>
+    <strong><p><font size="9" color="red">*</font><label>&nbsp Campos Obrigatórios</strong></label></p>
+    <FIELDSET>
+        <LEGEND>
+            <h2>
+            <LABEL>
+                Editando Atividade
+            </LABEL>
+            </h2>
+        </LEGEND>
+    <%= form_for(@atividade_aluno, :url => {:controller => "avaliacoes",:action => "avaliar"}) do |l| %>
+        <%= render "shared/error_messages", :target => @atividade_aluno %>
+        <div class="field">
+            <b><%= l.label :nome %>&nbsp<i id="red">*</i>&nbsp
+            <%= l.text_field :nome ,:readonly=>:false %>
+        </div>
+
+        <div class="field">
+            <%= l.label :descricao %>&nbsp<i id="red">*</i>&nbsp
+            <%= l.text_field :modalidade_nome,:readonly=>:false, :size=>"26" %>
+        </div>
+
+        <div class="field">
+            <%= l.label :carga_horaria_enviada %>&nbsp<i id="red">*</i>&nbsp
+            <%= l.text_field :carga_horaria, :readonly=>:false, :size=>"13" %>
+        </div>
+
+        <div class="field">
+            <%= l.label :carga_horaria_aceita %>&nbsp<i id="red">*</i>&nbsp
+            <%= l.text_field :carga_horaria_aceita, :size=>"15" %>
+        </div>
+
+        <div class="field">
+            <%= l.label "Avaliar ?" %><br />
+            <%= l.radio_button :avaliada, 1 %><label>&nbspSim</label>
+            <%= l.radio_button :avaliada, 0 %><label>&nbspNão</label>
+        </div>
+
+        <div class="field">
+            <%= l.label "Justificativa" %><br />
+            <%= l.text_area :justificativa %>
+        </div>
+
+        <BR /></FIELDSET>
+            <div class="botao_left">
+                <span class="luz">
+                    <%= l.submit "Avaliar", :class=>"botao", :id=>'id_botao' %>
+                </span>
+            </div>
+            <div class="botao_left">
+                <p>
+                <button type="button" class="botao", id='id_botao2' onclick="JavaScript:index()" >
+                    Cancelar&nbsp<font size="30"></p></font>
+                </button>
+            </div>
+    <% end %>
+<%- end -%>
