--- a/app/views/avaliacoes/list.html.erb
+++ b/app/views/avaliacoes/list.html.erb
@@ -6,6 +6,6 @@
                 </center>
         </div>
 <% else %>
-    <%= render :partial=>"listagem_de_atividades_do_aluno_x", :locals=>{:atividades=>@atividade_aluno}%>
+    <%= render :partial=>"listagem_de_atividades_do_aluno_x", :locals=>{:atividades=>@atividades}%>
 <% end %>
 
